--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -523,7 +523,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "RePurchase"
+            "value" : "Restore"
           }
         }
       }
