完成数字目标单位的相关逻辑

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -30,6 +30,9 @@
     "%lld" : {
 
     },
+    "%lld%%" : {
+
+    },
     "%lld日" : {
 
     },
@@ -130,6 +133,9 @@
         }
       }
     },
+    "100%" : {
+
+    },
     "2024" : {
 
     },
@@ -168,6 +174,9 @@
 
     },
     "iCloud同步" : {
+
+    },
+    "picker" : {
 
     },
     "Pro" : {
@@ -485,7 +494,6 @@
       }
     },
     "当前进度" : {
-      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
